--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "haxor-app",
-  "version": "0.2.0",
+  "version": "0.1.0",
   "homepage": "https://github.com/brunodb3",
   "author": "Bruno Duarte Brito <brunodb3@gmail.com>",
   "description": "The best mobile hacking experience",
@@ -16,6 +16,7 @@
     "release": "standard-version",
     "build:prod": "ng build --prod",
     "firebase:deploy": "firebase deploy",
+    "release:first": "standard-version --first-release",
     "deploy": "npm run build:prod && npm run firebase:deploy"
   },
   "dependencies": {
